--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
-
-		<!-- Theme used for syntax highlighted code -->
+		<link rel="stylesheet" href="dist/theme/sky.css">
+		<link rel="stylesheet" href="reveal-override.css"/>
+		
+		<!--   Theme used  for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>OpenHarmony Tutorial: Exercise 1</section>
+				<section>OpenHarmony Tutorial: Exercise 1
+				</section>
 				<section
 					data-markdown="oh-tutorial.md"
 					data-separator="^\n\n\n"
